--- a/weapp/templates/cloudHousekeeper.html
+++ b/weapp/templates/cloudHousekeeper.html
@@ -4,6 +4,15 @@
 <html class="{% if user.is_from_android %} android{% endif %}{% if not user.is_from_weixin %} notweixin{% endif %}" style="background:#f2f2f2;">
     <head>
         <meta charset="UTF-8" />
+         <!-- uc强制竖屏 -->
+        <meta name="screen-orientation" content="portrait">
+        <!-- QQ强制竖屏 -->
+        <meta name="x5-orientation" content="portrait">
+        <!-- UC强制全屏 -->
+        <meta name="full-screen" content="yes">
+        <!-- QQ强制全屏 -->
+        <meta name="x5-fullscreen" content="true">
+
         <title>{{ page_title }}</title>
         {% if request.enable_sql_monitor %}
         <link type="text/css" rel="stylesheet" media="all" href="/static/bootstrap/css/bootstrap.css">
