--- a/weapp/templates/new_jqm_content_base.html
+++ b/weapp/templates/new_jqm_content_base.html
@@ -194,7 +194,7 @@
 
             var link = window.location.href;
             if (link.indexOf('fmt') === -1){
-                if (link.indexOf('&') === -1){
+                if (link.indexOf('/?') === -1){
                     link = link +"?fmt="+W.curRequestMemberToken;
                 } else {
                     link = link +"&fmt="+W.curRequestMemberToken;
