--- a/weapp/templates/base.html
+++ b/weapp/templates/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//ZH-CN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+	<!-- asdf-->
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 	{% block customerized_meta %}{% endblock %}
